2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct (symlink): 
	* GNUmakefile.in (link-tree): Add scripts to prefix.

	* lily/general-scheme.cc (ly:effective-prefix): New function.

	* scm/backend-library.scm (postscript->png): Use it.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/part-combiner.scm (determine-split-list): switch off
	debugging info.

	* scm/backend-library.scm (postscript->png): explicitly use ps2png.py
	if available.

	* scm/define-context-properties.scm
	(all-user-translation-properties): add stringNumberOrientations.

	* lily/new-fingering-engraver.cc (position_scripts): make generic,
	so fingering and string-numbers are separately controlled.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Fix shared size test: add missing comma, do
	not use debugging.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile.in (local-WWW-post): remove UTF8 .htaccess.

	* config.hh.in: add HAVE_FONTCONFIG.

	* Documentation/user/instrument-notation.itely (String number
	indications): new node.

	* input/regression/new-markup-syntax.ly (texidoc): add circle.

	* lily/new-fingering-engraver.cc (add_string): new function. 
	(acknowledge_grob): accept string-number-event as well.

	* scm/define-markup-commands.scm (circle): new markup command.

	* scm/output-lib.scm (print-circled-text-callback): new function.

	* lily/GNUmakefile: move ifeq after include stepmake.make.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* config.make.in (HAVE_LIBKPATHSEA_SO):
	* stepmake/aclocal.m4: Also subst HAVE_LIBKPATHSEA_SO.

	* lily/GNUmakefile (MODULE_LDFLAGS): Only if not HAVE_KPATHSEA_SO,
	add KPATHSEA_LIBS.

	* debian/watch: 
	* debian/control: Update.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/test/title-markup.ly (spaceTest): remove.

	* input/test/embedded-tex.ly (Module): remove.

	* input/test/music-box.ly: use 'name property, not ly:music-name.
