@@ -1,3 +1,8 @@
+2005-03-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/grace-engraver.cc (derived_mark): change signature, add
+	const.
+
 2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* SConstruct (symlink): 
@@ -8,6 +13,9 @@
 	* scm/backend-library.scm (postscript->png): Use it.
 
 2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/paper-score.cc (process): don't delete grobs after
+	producing stencils. 
 
 	* scm/part-combiner.scm (determine-split-list): switch off
 	debugging info.
